# ic-static-assets

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build-and-test.yml
examples/basic/: README.md  canister_ids.json  dfx.json
examples/basic/src/backend/: Cargo.toml
examples/basic/src/backend/src/: lib.rs
examples/basic/src/frontend/: README.md
examples/with-custom-router/: dfx.json
examples/with-custom-router/src/backend/: Cargo.toml  backend.did
examples/with-custom-router/src/backend/src/: lib.rs
examples/with-custom-router/src/frontend/: README.md
